--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,5 @@
 {% extends '_base.html' %}
+{% load static %}
 
 
 {% block title %}Главная{% endblock title %}
@@ -7,5 +8,5 @@
 {% block content %}
 
 <h1>Главная</h1>
-
+<img src="{% static 'img/doc4.png'%}" alt="Me">
 {% endblock content %}
