--- a/templates/home.html
+++ b/templates/home.html
@@ -8,5 +8,5 @@
 {% block content %}
 
 <h1>Главная</h1>
-<img src="{% static 'img/doc4.png'%}" alt="Me">
+<img src="{% static 'img/me.png'%}" alt="Me">
 {% endblock content %}
