--- a/templates/_base.html
+++ b/templates/_base.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}Давыдкин Евгений{% endblock title %}</title>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    {% block link_css %}{% endblock link_css %}
 </head>
 <body>
 
