--- a/templates/home.html
+++ b/templates/home.html
@@ -5,8 +5,12 @@
 {% block title %}Главная{% endblock title %}
 
 
+{% block link_css %}<link rel="stylesheet" href="{% static 'css/home.css' %}">{% endblock link_css %}
+
+
 {% block content %}
 
 <h1>Главная</h1>
 <img src="{% static 'img/me.png'%}" alt="Me">
+
 {% endblock content %}
